--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
     // Predefined login credentials (can be replaced with your logic)
     const allowedEmail = "khongthichnhieuchuyendau@gmail.com";
-    const allowedPassword = "";
+    const allowedPassword = "tttt51172";
 
     const loginForm = document.getElementById("loginForm");
     const dashboard = document.getElementById("dashboard");
